spacing issues

--- a/media.css
+++ b/media.css
@@ -1,4 +1,3 @@
-/* Responsive adjustments */
 /*
 @media screen and (min-width: 2500px) {
     body {
@@ -86,22 +85,6 @@
     }
 }*/
 
-@media screen and (max-width: 1400px) {
-
-    .cont-img,
-    .cards-cont {
-        width: 90%;
-        margin: 20px 0;
-    }
-
-    .cont-main {
-        display: flex;
-        margin: 5px;
-        flex-direction: column;
-        align-items: center;
-    }
-
-}
 
 
 
@@ -112,13 +95,19 @@
         width: 95%;
     }
 
+
+    .cont-img,
     .cards-cont {
+        width: 90%;
+        margin: 20px 0;
         padding: 0;
     }
 
-    .hr-finance {
-        margin: 0;
+    .subHeading {
+        font-size: 2.5rem;
     }
+
+
 
     .cont-main {
         display: flex;
@@ -147,16 +136,12 @@
         font-size: 2rem;
     }
 
-    /* .cont-img,
-    .cards-cont {
-        width: 90%;
-        margin: 20px 0;
-    } */
 
     #cards-container {
         flex-wrap: wrap;
         justify-content: center;
         margin: 10px 0;
+        gap: 1.5rem;
     }
 
 
@@ -164,7 +149,7 @@
     .imagecardnew,
     .rightcard {
         width: 100%;
-        padding: 10px 10px;
+        /* padding: 10px 10px; */
     }
 
 
@@ -172,6 +157,8 @@
         /* width: calc(50% - 20px); */
         margin: 10px;
         height: 180px;
+        width: 44%;
+        margin: 0;
     }
 
     .containerThird {
@@ -185,8 +172,8 @@
     }
 
     .hr-finance {
-        width: 80%;
-
+        width: 65%;
+        /* padding: 0 0 10px; */
     }
 
     .containerlast {
@@ -203,6 +190,7 @@
         display: block;
     }
 
+
     .nav-items {
         margin-left: 0;
     }
@@ -214,9 +202,9 @@
         display: none;
     }
 
-    .navEle {
+    /* .navEle {
         margin: 15px 0;
-    }
+    } */
 
     .background {
         width: 80%;
@@ -240,9 +228,9 @@
         line-height: 2rem;
     }
 
-    /* .rightcard {
-        margin: 15px 0;
-    } */
+    .rightcard {
+        padding: 10px 0;
+    }
 
     .newcard {
         flex-direction: column;
@@ -254,14 +242,19 @@
         line-height: 2.2rem;
     }
 
+    .hr-finance {
+        width: 100%;
+        padding: 0 0 10px;
+    }
+
     .lastHeading {
         width: 90%;
         margin: 70px 0 0 0;
     }
 
-    .card {
+    /* .card {
         width: 40%;
-    }
+    } */
 
 
     .footer-flex {
@@ -291,8 +284,6 @@
         margin-bottom: 3rem;
     }
 
-
-
     .logo {
         height: 30px;
     }
@@ -312,8 +303,8 @@
 
     .card {
         width: 100%;
-        height: 17vh;
-        font-size: 0.9rem;
+        height: 120px;
+        font-size: 1rem;
         line-height: 1.2rem;
         margin: 10px 0;
     }
@@ -344,8 +335,8 @@
 
     .document-image {
         margin: 0 0 20px 0;
-        width: 80%;
-
+        width: 94%;
+        border-radius: 0;
     }
 
     .containerThird {
@@ -360,7 +351,7 @@
 
     .containercards {
         padding: 10px 0;
-        width: 95%;
+        width: 90%;
     }
 
     .continner {
